# mcp_router

./: .gitignore  LICENSE  README.md  TEST_RESULTS.md  USAGE.md  config.json  environment.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  python-test-conda.yml  python-test.yml
data/amap_weather_mcp/: mcp_settings.json
src/: __init__.py
src/api/: __init__.py  app.py  routes.py
src/core/: __init__.py  config.py  exceptions.py  logger.py
src/mcp/: __init__.py  client.py  router.py  server.py  transport.py
src/utils/: __init__.py  security.py  validator.py  watcher.py  websocket_logger.py
test/: README.md  __init__.py  conftest.py  run_integration_test.py  test_api.py  test_integration.py  test_router.py  test_security.py
